# Rust-Toy

./: .gitignore  Cargo.toml  LICENSE  LICENSE MIT  README.md
api_g_r_d/: Cargo.toml
api_g_r_d/src/: lib.rs
decrypt_ncm/: .gitignore  Cargo.toml  README.md
decrypt_ncm/examples/: ncm_test.rs
decrypt_ncm/src/: lib.rs  main.rs
generate_random_password/: Cargo.toml  README.md
generate_random_password/src/: main.rs
grp/: Cargo.toml  README.md
grp/examples/: grp.rs  grp_test.rs
grp/src/: lib.rs  main.rs  prelude.rs
grp_api/: Cargo.toml  README.md
grp_api/src/: lib.rs
rand_pwd/: Cargo.toml
rand_pwd/examples/: rand_pwd_test.rs
rand_pwd/src/: lib.rs
rpg/: Cargo.toml  README.md
rpg/examples/: rpg_test.rs
rpg/src/: lib.rs  prelude.rs
rusic/: Cargo.toml  README.md
rusic/examples/: play_song.rs
rusic/src/: lib.rs
