[package]
name = "grp"
version = "0.1.1"
authors = ["TENX-S <ttenx@pm.me>"]
edition = "2018"
description = "Generate random password"
homepage = "https://github.com/TENX-S/Rust-Toy"
repository = "https://github.com/TENX-S/Rust-Toy"
license = "Apache 2.0"
readme = "README.md"
keywords = ["password", "random", "random password"]


[dependencies]

dirs = "3.0"
chrono = "0.4"
rand = "0.7.3"
whoami = "0.9.0"
sys-info = "0.7.0"
num-traits = "0.2.12"
num-bigint = "0.3.0"
